# vimdevenv

./: .vimrc  Dockerfile  README.md
.github/workflows/: build.yml
Example_Modern_CMake/: CMakeLists.txt  compile_commands.json
Example_Modern_CMake/app/: CMakeLists.txt
Example_Modern_CMake/app/src/: main.cpp
Example_Modern_CMake/docs/: Doxyfile.in
Example_Modern_CMake/lib/: CMakeLists.txt
Example_Modern_CMake/lib/include/: mylib.h
Example_Modern_CMake/lib/src/: mylib.cpp
